# DockerDemo

./: .env.example  .gitignore  alembic.ini  docker-compose.yml  inst.txt  pyproject.toml  test_db_connection.py
alembic/: env.py
alembic/versions/: 4ec9f084b8d9_create_employees_table.py
app/models/: employee.py
